--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
