--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.meta filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
